bug fix: make the log messages not overflow the table

--- a/apps/popcorn/priv/css/popcorn-overrides.less
+++ b/apps/popcorn/priv/css/popcorn-overrides.less
@@ -709,3 +709,8 @@ body > .container {
     text-align: right;
   }
 }
+
+td.log-message {
+  max-width:621px;
+  word-wrap:break-word;
+}
